Update theme color
Testing theme color change

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Theme settings
 doks:
     baseurl:
-    color_theme: # Available themes: blue (default), green, purple, red and yellow
+    color_theme: purple # Available themes: blue (default), green, purple, red and yellow
     header:
         logo:
             text: XDC Community Portal
