--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ doks:
     color_theme: green # Available themes: blue (default), green, purple, red and yellow
     header:
         logo:
-            text: XDC Community Portal
-            image:
+            text: 
+            image: true
         nav:
             - item_name: Item 1
               item_url: '#'
