--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Theme settings
 doks:
     baseurl:
-    color_theme: green # Available themes: blue (default), green, purple, red and yellow
+    color_theme: blue # Available themes: blue (default), green, purple, red and yellow
     header:
         logo:
-            text: 
-            image: true
+            text: XDC Community Portal
+            image:
         nav:
             - item_name: Item 1
               item_url: '#'
