--- a/_config.yml
+++ b/_config.yml
@@ -44,4 +44,4 @@ includes_dir: ./doks-theme/_includes
 exclude: [ 'README.md', 'CHANGELOG.md' ]
 permalink: /:title/
 
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
