updating header logo
size may be wrong

--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ youtube: "https://www.youtube.com"
 
 ## Theme Options
 animated_header: ""  #true 
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: wblueu
+github_username:  walterblueu
 
 
 # Build settings
