--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ reddit: "https://www.reddit.com/r/xinfin/"
 vimeo: "https://vimeo.com/xdccommunity"
 dribble: "https://www.dribble.com"
 youtube: "https://www.youtube.com/channel/UCXAAtlD-CRraNJKzDTF4pfg"
+discord: "https://discord.gg/QbwbXjfg"
 
 ## Theme Options
 animated_header: ""  #true 
