--- a/_data/supports.yml
+++ b/_data/supports.yml
@@ -5,10 +5,10 @@
   url: https://github.com/XDC-Community/XDC-Community.github.io/fork
   animation: fadeInLeft
 
-- name: Ask the Community
-  icon: /assets/images/looking-logo2.png
-  description: psum is simply dummy text of the pritypesetting industry Lorem Ipsum has been the industry's standard 
-  button_label: Join Community
-  url: https://support.themeix.com/portal/community/newtopic
+- name: Start a Discussion
+  icon: /assets/images/customer-service.png
+  description: Start a discussion on the built in community forum in the developer portal repository
+  button_label: Discuss
+  url: https://github.com/XDC-Community/XDC-Community.github.io/discussions
   animation: fadeInRight
   
