Updating Blog section

--- a/_data/trending_items.yml
+++ b/_data/trending_items.yml
@@ -1,15 +1,15 @@
-- title: Axotic HTML5 Template
-  url: https://themeix.com/product/axotic-responsive-html5-blog-site-template/
+- title: Join the xdc.dev forum for technical support
+  url: http://xdc.dev/
     
-- title: Appszone Jekyll Template
-  url: https://themeix.com/product/appszone-jekyll-app-landing-page/
+- title: XDC Workshop - Fundamental Concepts
+  url: https://codedamn.com/learn/xdc-workshop
     
-- title: NewsX Ghost Theme
-  url: https://themeix.com/product/newsx-ghost-template/
+- title: XDC Workshop - Advanced Concepts
+  url: https://codedamn.com/learn/xdc-workshop-advanced
     
-- title: Primula Blog Template
-  url: https://themeix.com/product/primula-modern-html5-blog-site-template/
+- title: XinFin GitHub
+  url: https://github.com/XinFinorg
     
-- title: Papp Jekyll Template
-  url: https://themeix.com/product/papp-responsive-jekyll-landing-page-theme/
+- title: XDC Foundation GitHub
+  url: https://github.com/XDCFoundation
     
