Renaming community links

--- a/_data/trending_items.yml
+++ b/_data/trending_items.yml
@@ -1,10 +1,10 @@
-- title: Join the xdc.dev forum for technical support
+- title: xdc.dev forum technical support
   url: http://xdc.dev/
     
-- title: XDC Workshop - Fundamental Concepts
+- title: XDC Fundamental Concepts
   url: https://codedamn.com/learn/xdc-workshop
     
-- title: XDC Workshop - Advanced Concepts
+- title: XDC Advanced Concepts
   url: https://codedamn.com/learn/xdc-workshop-advanced
     
 - title: XinFin GitHub
