Removing Blog Submenu

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,15 +4,8 @@
   url: /
 - text: Support
   url: /pages/support
-- text: Blog
-  url: /blog
-  submenu:
-  - text: Blog Post - Left Sidebar
-    url: /blog-post-left-sidebar
-  - text: Blog Post - Right Sidebar
-    url: /blog-post-right-sidebar
-  - text: Tag - Education
-    url: /tag/education
+- text: Community Voice
+  url: /blog-post-left-sidebar
 - text: Docs
   url: /explore-topics
   submenu:
