Updating static image on blog

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
   url: /
 - text: Support
   url: /pages/support
-- text: Community Voice
+- text: Community Voices
   url: /blog-post-left-sidebar
 - text: Docs
   url: /explore-topics
