--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ discord: "https://discord.gg/QbwbXjfg"
 
 ## Theme Options
 animated_header: ""  #true 
-twitter_username: wblueu
-github_username:  walterblueu
+twitter_username: xdc-community
+github_username:  xdc-community
 
 
 # Build settings
