Moving EIP page to the xdc-community

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,6 +18,6 @@
 - text: Support
   url: /pages/support
 - text: XIPs
-  url: https://xips.xdc.community/
+  url: /pages/xips
 - text: Discord
   url: https://discord.gg/QbwbXjfg
