--- a/_data/slider.yml
+++ b/_data/slider.yml
@@ -1,6 +1,6 @@
 
 - title: "<span>XDC Network</span> documentation portal for XDC Network developers"
-  button_label: "Get Started"
+  button_label: "Docs"
   button_link: "https://themeix.com/product/doxy-documentation-website-jekyll-template/"
 
 - title: "<span>Build it on XDC</span> with tutorials and sample code"
