Updating Discord Link to Perma-Link
Fixing link to Discord per Issue #2

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ reddit: "https://www.reddit.com/r/xinfin/"
 vimeo: "https://vimeo.com/xdccommunity"
 dribble: "https://www.dribble.com"
 youtube: "https://www.youtube.com/channel/UCXAAtlD-CRraNJKzDTF4pfg"
-discord: "https://discord.gg/QbwbXjfg"
+discord: "https://discord.gg/MFeHJ6C5gn"
 
 ## Theme Options
 animated_header: ""  #true 
