--- a/_data/services.yml
+++ b/_data/services.yml
@@ -6,7 +6,7 @@
   
 - title: Challenges
   icon: /assets/images/challenges-icon.png
-  description:  Learn fundamental and advanced skills by actually coding.
+  description:  Learn fundamental and advanced skills by actually coding to complete challenges.
   button_label: Level Up
   url: /pages/challenges/
   
