--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,11 +5,13 @@
 - text: Docs
   url: /explore-topics
   submenu:
-  - text: Docs - Content Links
+  - text: Concepts
     url: /docs/file-structure/
-  - text: Docs - Only TOC
+  - text: Tutorials
     url: /docs/cloud-flare/
-  - text: Docs Fullwidth
+  - text: Documentation
+    url: /docs/client-editable-jekyll-sites/
+  - text: Tools
     url: /docs/client-editable-jekyll-sites/
 - text: Challenges
   url: /pages/challenges
