--- a/_data/services.yml
+++ b/_data/services.yml
@@ -14,5 +14,5 @@
   icon: /assets/images/service-icon3.png
   description:  Read detailed documentation, explore tutorials, and look at sample code.
   button_label: Read Docs
-  url: /docs/left-sidebar-example
+  url: /pages/explore-topics/
   
