--- a/_data/faq_page.yml
+++ b/_data/faq_page.yml
@@ -1,8 +1,8 @@
 - title: General Questions
   id: faqaccordion1
   subfaq:
-  - question: Fames ac turpis egestas integer eget aliquet?
-    answer: It works using the Bootstrap 4 collapse component with cards to make a vertical accordion that expands and collapses as questions are toggled.
+  - question: How do I update this page?
+    answer: In the repository navigate to the ...\GitHub\XDC-Community.github.io\_data folder and open the "faq_page.yml" file.  The text for the FAQs can be modified within this file.  Once committed the GitHub page will automically build and deploy.
     
   - question: Tortor dignissim convallis aenean et?
     answer: Bootstrap is the most popular CSS framework in the world. The latest version released in 2018 is Bootstrap 4. Bootstrap can be used to quickly build responsive websites.
