--- a/_data/faq_page.yml
+++ b/_data/faq_page.yml
@@ -4,8 +4,8 @@
   - question: How do I update this page?
     answer: In the repository navigate to the ...\GitHub\XDC-Community.github.io\_data folder and open the "faq_page.yml" file.  The text for the FAQs can be modified within this file.  Once committed the GitHub page will automically build and deploy.
     
-  - question: Tortor dignissim convallis aenean et?
-    answer: Bootstrap is the most popular CSS framework in the world. The latest version released in 2018 is Bootstrap 4. Bootstrap can be used to quickly build responsive websites.
+  - question: What is the XDC Network?
+    answer: It is a Layer 1 EVM Network 
     
   - question: Egestas diam in arcu cursus euismod quis viverra nibh cras?
     answer: The answer to the question can go here.
