testing doc pages

--- a/_data/concept_boxes.yml
+++ b/_data/concept_boxes.yml
@@ -2,16 +2,16 @@
   icon: /assets/images/wallet-icon.png
   description: Integrating smart contracts into Web2.0 applications using XDCPay
   button_label: Read On
-  url: /docs/Integrate-XDCPay/
+  url: /docs/concepts/Integrate-XDCPay/
   
 - name: XDC Airdrops
   icon: /assets/images/airdrop-icon.png
   description: Implementing XDC Airdrops and example code
   button_label: Read On
-  url: /docs/XDC-Airdrops/
+  url: /docs/concepts/XDC-Airdrops/
   
 - name: NFTs as Identification
   icon: /assets/images/nft-icon.png
   description: Implementing NFTs as identification tokens for delegating authority
   button_label: Read On
-  url: /docs/NFT-as-ID
+  url: /docs/concepts/NFT-as-ID
